# 3dc

./: .gitignore  AGENTS.md  PROJECT_GOALS.md  fix_bounds.py  fix_union.py  rename_dll.py  test_sleep.zig
Assets/Plugins/: cutting_kernel_v13.dylib  cutting_kernel_v14.dylib  cutting_kernel_v15.dylib  cutting_kernel_v16.dylib  cutting_kernel_v17.dylib  cutting_kernel_v18.dylib  cutting_kernel_v19.dylib  cutting_kernel_v20.dylib  cutting_kernel_v21.dylib  cutting_kernel_v22.dylib  cutting_kernel_v23.dylib  cutting_kernel_v24.dylib  cutting_kernel_v25.dylib  cutting_kernel_v26.dylib  cutting_kernel_v27.dylib  cutting_kernel_v28.dylib  cutting_kernel_v29.dylib  cutting_kernel_v30.dylib  cutting_kernel_v31.dylib  cutting_kernel_v32.dylib  cutting_kernel_v33.dylib  cutting_kernel_v34.dylib  cutting_kernel_v35.dylib  cutting_kernel_v36.dylib  cutting_kernel_v37.dylib  cutting_kernel_v38.dylib  cutting_kernel_v39.dylib  cutting_kernel_v40.dylib  cutting_kernel_v41.dylib  cutting_kernel_v42.dylib  cutting_kernel_v43.dylib  cutting_kernel_v44.dylib  cutting_kernel_v45.dylib  libsdf_island_remover.dylib  sdf_island_remover.dylib  sdf_island_remover.zig  sdf_island_remover_v2.dylib  sdf_island_remover_v3.dylib  sdf_island_remover_v4.dylib  sdf_island_remover_v5.dylib  (+8 more)
Assets/Scenes/: SampleScene.unity
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/_Recovery/: 0 (1).unity  0 (3).unity  0 (4).unity  (+1 more)
Native/CuttingKernel/: CMakeLists.txt  README.md  build_macos.sh
Native/CuttingKernel/src/: cutting_kernel.cpp
ProjectSettings/: ProjectSettings.asset
(+18 files in other folders)
